<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_colony"
        android:icon="@drawable/ic_nav_colony"
        android:title="@string/nav_colony" />

    <item
        android:id="@+id/nav_crew"
        android:icon="@drawable/ic_nav_crew"
        android:title="@string/nav_crew" />

    <item
        android:id="@+id/nav_economy"
        android:icon="@drawable/ic_nav_economy"
        android:title="@string/nav_economy" />

    <item
        android:id="@+id/nav_mission"
        android:icon="@drawable/ic_nav_mission"
        android:title="@string/nav_mission" />

    <item
        android:id="@+id/nav_stats"
        android:icon="@drawable/ic_nav_stats"
        android:title="@string/nav_stats" />

</menu>
